--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank">分析：美中贸易战 明年进入三个关键期</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180493925-1-600x400-1-150x120.jpg" align ="left"></a>2020年是观察美中贸易关系更重要的一年，专家说，兑现承诺比谈判更为困难，明年进入三个关键期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746133.md#1" target="_blank">决战2020 章天亮：为中共垮台做哪些准备？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0f1c76ebde26d51b8c549fc56e4a3e31-150x120.jpg" align ="left"></a>大纪元新唐人媒体集团12月21日举办“决战2020 时事论坛”，美国飞天大学人文与科学副教授章天亮以“我们应该为中共垮台做哪些准备？”为题分享对国际时事的观察。他表示，中国的经济在三个问题上已经进入死胡同，分别是美中贸易战、香港问题和民企国有化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746975.md#1" target="_blank">中共宣传在国会传播 美议员要求听证调查</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746975.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-158366874-150x120.jpg" align ="left"></a>根据《华盛顿自由灯塔》获得的官方通讯，美国国会众议院军事委员会成员吉姆?班克斯（Jim Banks）正督促国会领袖，就中共政府资助的宣传在美国国会传播举行听证会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745711.md#1" target="_blank">揭抚顺丑闻后 花千芳又剑指广州遭讥讽</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745711.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/80832240_514425755830972_199441371939995648_n-150x120.jpg" align ="left"></a>中共“高级五毛”花千芳在曝光抚顺市政府丑闻后，日前再揭广州当局“崇洋媚外”，引发网民关注和热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743411.md#1" target="_blank">中共尽失人心 反习势力与保习派激战</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743411.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/11/1211290826301497-150x120.jpg" align ="left"></a>中共内外交困之际，中共各派围绕习近平是否将连任等问题展开激战。习成为各派保护和攻击的中心，中共各种不利的消息也都推给了习，习将如何面对这些困局？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745443.md#1" target="_blank">摩托车横穿李克强车队 险酿意外</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745443.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-17-150x120.jpg" align ="left"></a>中日韩领导峰会12月24日在四川成都登场，但中间却发生一起意外，中日韩领导人车队在成都街头驶过时，一个摩托车直接从领导人车队中穿过，险酿意外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745305.md#1" target="_blank">涉收受中国博彩企业贿金 日本众议员被捕</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/12/1212160916152519-150x120.jpg" align ="left"></a>日本内阁府前副大臣、自民党众议员秋元司（Tsukasa Akimoto）因涉嫌接受中国博彩企业贿赂，周三（12月25日）遭东京地检特搜部逮捕。这是自2010年以来在日本首次因涉嫌违法逮捕现任国会议员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745210.md#1" target="_blank">中国对美稀土磁铁出口11月锐减</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/cdd65c622ffbad1893ec97851770c2cf-150x120.jpg" align ="left"></a>在中美双方达成第一阶段贸易协议后，来自美国海关数据最新的数据显示，11月份中国对美国稀土磁铁出口量环比下降21.2％。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:47 PM							</td></tr>
@@ -23,11 +28,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740844.md#1" target="_blank">警察绝密文件流出 视频反映港警恐慌怕落单</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912160321521501-150x120.jpg" align ="left"></a>近日香港警方的一份内部绝密文件被曝光，前线警员学样提出7大诉求，被认为是警方恐惧要远离危险，民间质疑警方若按诉求执行，那警队到底受什么约束？等于失控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740992.md#1" target="_blank">北大教授郑也夫吁七常委带头公示财产</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740992.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/VCG11413885773-150x120.jpg" align ="left"></a>继去年底公开呼吁中共“淡出历史舞台”后，北大教授郑也夫再度刊文，呼吁中共政治局七常委带头公示财产，推行财产公示制度，因为这是最好的反腐方法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741027.md#1" target="_blank">安倍和习近平会面 促保持香港自由开放</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11741027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1NA0FB-150x120.jpg" align ="left"></a>周一（12月23日），日本首相安倍晋三和中国国家主席习近平会面时说，香港应该“继续保持自由开放”。半年多来，香港反送中抗议震惊全球。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11735005.md#1" target="_blank">【2019盘点】中共战狼外交遭打脸十瞬间</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/20/n11735005.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/0167055816d2d30c5a94d96696748b35-600x400-1-1-150x120.jpg" align ="left"></a>近年来，中共“战狼式”外交备受外界诟病，也使它越来越孤立。2019年以来，有十大外交事件让中共频被打脸，也引发西方各国全面反击中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740190.md#1" target="_blank">《金融时报》2019年度词汇：脱钩</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1053163368-150x120.jpg" align ="left"></a>2019年已接近尾声，不少媒体或机构都会选出年度词汇来代表这一年的国际局势。而英国《金融时报》专栏作家弗鲁哈尔（Rana Foroohar）所选出的2019年年度词汇则是能体现美中关系演变的“脱钩”（Decoupling）这个字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738051.md#1" target="_blank">世界边缘的宁静岛屿 为何成美中角力新战场</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738051.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_15X835-150x120.jpg" align ="left"></a>在世界边缘的挪威海和北大西洋之间，有一群遗世独立般的岛屿。但最近，这个偏远的群岛受到世界媒体关注，成为美中角力的新战场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738990.md#1" target="_blank">指如今演艺工作式微 周润发有意退休后转行</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/2582b1b19bf9d2f79233c4d7c6b586d8-150x120.jpg" align ="left"></a>12月22日，艺人周润发（发哥）现身香港养和医院，陪在医院检查身体的90多岁母亲过冬至。被问及工作计划，常带着明星艺人行山的发哥笑说：“我想转行，可以做运动员，可以考教练牌照教大家行山。演艺界开始式微啦！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11739131.md#1" target="_blank">学者：中共通过严密的监控扼杀了公民社会</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11739131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-55815023-150x120.jpg" align ="left"></a>那些倡导跟中共“接触”的人认为，“接触”可以促进中国民主化进程。但是即便这种假说成立，民主运动也需要公民社会的存在。但不幸的是，中共通过严密的监控系统扼杀了公民社会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11745929.md#1" target="_blank">【翻墙必看】海内外言论指向习</a><br></h3>中共内外交困之际，中共各派围绕习近平是否将连任等问题展开激战。习成为各派保护和攻击的中心，中共各种不利的消息也都推给了习，习将如何面对这些困局？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 9:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743385.md#1" target="_blank">王毅马云最新表述 佐证中共经济遇严重寒冬</a><br></h3>香港的一位企业家周先生表示，中国被认为世界第二大经济体，为何王毅会这样谦虚？道出背后原因，其实中共经济问题严重，已没可用外汇储备，“在三万一千亿美金储备中，中国祇有四千五百亿美金可用，其实依照日本的报告，中国现在是负1.5万亿美金外债，根本无外汇储备。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742514.md#1" target="_blank">涉金融犯罪 122名中国人被尼泊尔警方逮捕</a><br></h3>12月24日，尼泊尔警方表示已逮捕了122名中国籍公民。中共外交部发言人耿爽在例行记者会上被问及此事时称，这些人涉嫌从事跨境网络诈骗活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739502.md#1" target="_blank">【翻墙必看】90后女孩遭中共红三代老板强奸</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
@@ -37,6 +38,5 @@
 
 2.【内幕】小马奔腾翻车 车峰吞噬数字王国
 《大纪元时报》日前独家披露了神秘红三代操盘中共权贵海外资产的内幕。该报导揭示了中共权贵家族已渗.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:35 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11740491.md#1" target="_blank">抗争者被骂曱甴 警官称大众过度解读 引反弹</a><br></h3>警方骂抗争者为“曱甴”，而警民关系主任近日解释不要过度解读，“曱甴”从正面看是很有生命力的说法，引起舆论哗然，遭强烈反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid277_5.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid277_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_5.htm">http://www.epochtimes.com/gb/ncid277_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
